# embedding

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
src/: embedding.rs  error.rs  lib.rs  main.rs  model.rs
tests/: embed_e2e.rs
