[package]
name = "embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
fastembed = "5.13.4"
futures = "0.3.32"
hf-hub = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.39.2"
tokenizers = "0.22.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
